# Ingestor

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Plotter.ipynb  README.md  analyze_10mins_orderbook_data.ipynb  docker-compose.yml  ingested_124.json  readme.md
assets/: .features_list.swp  features_list  how_to_convert_pdf_tp_png  test.tex
data/: data_analysis.ipynb
notebooks/: Untitled.ipynb
src/: analytics.rs  connector.rs  fsm.rs  ingestor.rs  lib.rs  lob_feed_manager.rs  log_feed_manager.rs  main.rs  orderbook.rs  parquet_writer.rs  persistence.rs  tradeslog.rs
tests/: analytics_test.rs  concurrent_orderbook_test.rs  tradeslog_test.rs
