[package]
name = "binance_ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  # Asynchronous runtime
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }  # WebSocket client with TLS support
futures-util = "0.3"  # Utilities for working with futures
serde_json = "1.0"  # JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }  # Serialization framework
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
linregress = "0.5"

