[package]
name = "binance_ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  # Asynchronous runtime
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }  # WebSocket client with TLS support
futures-util = "0.3"  # Utilities for working with futures
serde_json = "1.0"  # JSON serialization/deserialization
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
linregress = "0.5"
thiserror = "1.0"
metrics = "0.20"
metrics-exporter-prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_arrow = "0.3.0" # Compatible with Arrow 47
parquet2 = "0.17"
arrow2 = { version = "0.17.4", features = ["io_parquet"] }
rust_decimal = "1.29"
rust_decimal_macros = "1.29"
polars = { version = "0.33.2", features = ["parquet", "lazy", "json"] }